# action-skip-ci

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: github.rs  main.rs
tests/data/: push_event.json
