[package]
name = "action-skip-ci"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
regex = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "0.4"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'